--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="ri-youtube-fill"></i>
             </a>
 
-            <a href="https://www.instagram.com/mr_sahiljaiswal/" style="background: #e1306c;" class="link">
+            <a href="https://www.instagram.com/beyond_sahil/" style="background: #e1306c;" class="link">
                 <i class="ri-instagram-line"></i>
             </a>
 
